@@ -17,6 +17,7 @@ float MTF(float x, float m, float lo, float hi);
 float MTFp(float x, struct mtf_params params);
 
 void apply_linked_pseudoinverse_mtf_to_fits(fits *from, fits *to, struct mtf_params params, gboolean multithreaded);
+void apply_unlinked_pseudoinverse_mtf_to_fits(fits *from, fits *to, struct mtf_params *params, gboolean multithreaded);
 void apply_linked_mtf_to_fits(fits *from, fits *to, struct mtf_params params, gboolean multithreaded);
 int find_linked_midtones_balance(fits *fit, float shadows_clipping, float target_bg, struct mtf_params *result);
 int find_linked_midtones_balance_default(fits *fit, struct mtf_params *result); // with default args
